--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,5 +1,8 @@
 section {
     min-height: 350px;
+    display: grid;
+    grid-template-columns: 1fr;
+    padding: 1rem;
 }
 
 section:nth-child(odd) {
