--- a/src/index.css
+++ b/src/index.css
@@ -10,13 +10,13 @@ h3,
 h4,
 h5,
 h6 {
-    margin: .7rem 0;
+    padding: .7rem 0;
 }
 
 p {
-    margin: .5rem 0;
+    padding: .5rem 0;
 }
 
 .box-shadow {
-    box-shadow: -1px 2px 3px rgba(0,0,0,0.3);
+    box-shadow: -1px 2px 3px rgba(0,0,0,0.4);
 }
