Navbar links placed within ul tag and adjusted nav styling and tweaking

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -7,11 +7,11 @@ header {
     z-index: 1;
 }
 
-header nav {
+header nav ul {
     display: flex;
     width: 100%;
     justify-content: flex-end;
-    position: relative;
+    position: absolute;
     z-index: 1;
 }
 
