--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -33,7 +33,7 @@ header nav a:hover {
     width: 100%;
     height: 100%;
     opacity: .5;
-    background: url('../../images/short-ribs.jpg') no-repeat center /cover;
+    background: url('../../../public/images/short-ribs.jpg') no-repeat center /cover;
     z-index: -1;
 }
 
