--- a/src/components/home/Sections.css
+++ b/src/components/home/Sections.css
@@ -1,5 +1,6 @@
 .section-container {
     width: 75%;
+    max-width: 1280px;
     margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
